package treulo.src.view;

public interface Observator {

    public void update();
}
